magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
.dataset-file-root {
    //TODO: Get values from variables
    padding: 1em;
    max-width: 48em;
    border-radius: 5px;
    position: relative;

    display: flex;
    justify-content: space-between;

    .dataset-file-file-title {
        margin: 0 0 0.5em 0;
        width: 370px;
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
    }

    .file-in-progress {
        .dataset-file-delete-button {
            position: absolute;
            width: 26px;
            height: 26px;
            border: none;
            right: 100px;
            top: 0px;
            padding: 1px 0px 0px 0px;
        }
        .file-icon-area {
            float: left;
            margin-right: 57px;
            .format-icon {
                width: 48px;
            }
            .format-text {
                text-transform: uppercase;
                text-align: center;
            }
        }
        .file-info {
            float: left;
            .file-name-size {
                font-size: 15px;
                font-weight: normal;
                font-style: normal;
                font-stretch: normal;
                line-height: 1.33;
                letter-spacing: normal;
                color: #484848;
                div {
                    float: left;
                }
            }
            .file-name {
                width: 260px;
                text-overflow: ellipsis;
                white-space: nowrap;
                overflow: hidden;
            }
            .file-status {
                font-size: 14px;
                font-weight: 300;
                font-style: normal;
                font-stretch: normal;
                line-height: normal;
                letter-spacing: normal;
                color: #636363;
            }
            .file-progress-bar {
                position: relative;
                height: 24px;
                border-radius: 8px;
                margin-top: 33px;
                margin-bottom: 9px;
                width: 330px;
                border: 1px solid #c0bebe;
                .file-progress-bar-content {
                    position: absolute;
                    border-radius: 8px;
                    height: 24px;
                    left: -1px;
                    top: -1px;
                    background-image: linear-gradient(
                            to left,
                            rgba(255, 255, 255, 0.5),
                            rgba(0, 0, 0, 0.5)
                        ),
                        linear-gradient(
                            to bottom,
                            rgba(65, 49, 87, 0.68),
                            rgba(65, 49, 87, 0.68)
                        );
                }
            }
        }
    }
}
.complete-processing.dataset-file-root {
    background-image: url("../../../assets/purple-box.svg");
    background-repeat: no-repeat;
    padding-left: 60px;
    width: 534px;
    height: 125px;

    .file-info {
        font-size: 13px;
        font-weight: normal;
        font-style: normal;
        font-stretch: normal;
        line-height: 1.54;
        letter-spacing: normal;
        color: #484848;
        font-weight: 300;
    }
    .dataset-file-edit-button {
        position: absolute;
        width: 26px;
        height: 26px;
        border: none;
        right: 65px;
        top: 10px;
        padding: 1px 0px 0px 0px;
    }

    .dataset-file-delete-button {
        position: absolute;
        width: 26px;
        height: 26px;
        border: none;
        right: 30px;
        top: 10px;
        padding: 1px 0px 0px 0px;
    }

    .dataset-file-edit-button:hover,
    .dataset-file-delete-button:hover {
        border: 1px solid #c0bebe;
        border-radius: 4px;
    }

    .au-text-input {
        width: 290px;
        height: 35px;
        border-radius: 8px;
        border: solid 1px #cccaca;
    }

    .SingleDatePickerInput {
        border-radius: 8px;
        border: solid 1px #cccaca;
    }

    .date-editor-wrapper {
        border: none;
    }
    .dataset-file-save-button {
        position: absolute;
        right: 25px;
        bottom: 18px;
        background-color: #30384d !important;
        border-radius: 5px;
        border: none;
    }
}

